--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <input class="priceInput">
             </div>
         </div>
-        <div class="rangeContaier" id="slider"></div>
-            <!-- <input type="range" min="0" max="100" value="0" class="slider" id="myRange"> -->
-        <!-- </div> -->
+        <div class="rangeContaier" id="slider">
+            <input type="range" min="0" max="100" value="0" class="slider" id="myRange">
+        </div>
     </body>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="script.js"></script>
