--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body> 
 	<div class="main"> 
 		<div class="gfg"> 
-			<p>GeeksForGeeks</p> 
+			<p>Not GfG but a copy for Sardor</p> 
 		</div> 
 		<div class="custom-wrapper"> 
 
